# opencv-learning

./: .gitignore
01.basics/: CMakeLists.txt
01.basics/src/: sample01.cpp  sample03.cpp  sample04.cpp  sample05.cpp
02.gui/: CMakeLists.txt
Building-Computer-Vision-Projects-with-OpenCV4-and-CPlusPlus/: CMakeLists.txt
Building-Computer-Vision-Projects-with-OpenCV4-and-CPlusPlus/01.basics/src/: sample02.cpp
Building-Computer-Vision-Projects-with-OpenCV4-and-CPlusPlus/02.gui/: CMakeLists.txt
Building-Computer-Vision-Projects-with-OpenCV4-and-CPlusPlus/02.gui/src/: sample01.cpp  sample02.cpp
Learning OpenCV 4 Computer Vision with Python 3/Chapter02/: Basic IO.ipynb  Cameo.py
